# hslibdpa

./: .gitmodules  ChangeLog.md  hslibdpa.cabal
bridge/: bridge.cpp  bridge.h
cbits/: bridge.cpp  bridge.h
scripts/: build_bridge.sh  build_bridge_raspi.sh  build_deps.sh
src/IQRF/: DPA.hs  DPA.hsc  SPI.hsc
src/IQRF/DPA/: Channel.hs  FRC.hs  Message.hsc
src/IQRF/DPA/Channel/: SPI.hs  SPI.hsc
src/IQRF/DPA/Internal/: Bytes.hs  Channel.hs  Message.hs
src/IQRF/DPA/Internal/Utils/: Bytes.hs
test/IQRF/: DPASpec.hs
test/IQRF/DPA/: MessageSpec.hs
test/IQRF/DPA/Internal/: MessageSpec.hs
test/IQRF/DPA/Internal/Utils/: BytesSpec.hs
