name:                hslibdpa
version:             1.1.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              jmalena
maintainer:          jonas.malena@gmail.com
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     IQRF.DPA
                       IQRF.DPA.Message
                       IQRF.DPA.Channel
                       IQRF.DPA.Channel.SPI
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  include-dirs:        /home/pi/hslibdpa/bridge
                       /home/pi/hslibdpa/deps/clibspi/include
  extra-lib-dirs:      /home/pi/hslibdpa/bridge
                       /home/pi/hslibdpa/deps/clibspi/build/Unix_Makefiles/lib
                       /home/pi/hslibdpa/deps/clibspi/build/Unix_Makefiles/lib
                       /home/pi/hslibdpa/deps/clibcdc/build/Unix_Makefiles/lib
                       /home/pi/hslibdpa/deps/clibdpa/build/Unix_Makefiles/lib
  extra-libraries:     bridge IqrfCdcChannel IqrfSpiChannel Dpa IqrfTracer spi_iqrf sysfs_gpio cdc pthread stdc++

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base >=4.9 && <4.10,
                       hspec >=2.5 && <2.6,
                       HUnit >=1.6 && <1.7,
                       hslibdpa
  default-language:    Haskell2010